--- a/home/home.css
+++ b/home/home.css
@@ -1,15 +1,3 @@
-@keyframes slideInBottom {
-    0% {
-        /* Can change transition if from left side just do it 100% */
-        transform: translateY(-100%);
-    }
-
-    100% {
-        transform: translateY(5%);
-    }
-}
-
-
 nav {
     background: #666;
     padding: 40px;
@@ -18,7 +6,17 @@ nav {
     left: 0;
     right: 0;
     height: 10px;
+    transition: height 0.5s;
 }
+
+.showNavDiv>nav {
+    height: 200px !important;
+}
+
+.hideNavDiv>nav {
+    height: 10px !important;
+}
+
 
 body {
     margin: 0;
@@ -32,73 +30,44 @@ a {
     color: #fff;
 }
 
-.links {
-    padding-left: 90px;
-    font-size: 17px;
-    transition-property: font-size;
-    transition-duration: 0.5s;
-    transition-delay: 0.2s;
+
+
+
+#navLinksResponsive {
+    visibility: hidden;
+    margin-top: 60px !important;
+}
+
+.showResponsiveLinks {
+    visibility: visible !important;
+}
+
+.hideResponsiveLinks {
+    visibility: hidden !important;
+    transition: ease-out 0.8s !important;
+
 }
 
 
-.links:hover {
-    font-size: 20px;
-}
-
-
-
-.showDiv {
-    display: block !important;
-    background-color: green !important;
-    /* top: 10% !important; */
-    position: fixed !important;
-    width: 100% !important;
-    animation-duration: 1s !important;
-    animation-timing-function: ease-in-out !important;
-    animation-delay: 0s !important;
-    animation-iteration-count: 1 !important;
-    animation-name: slideInBottom !important;
-}
-
-@keyframes slideInRight {
-    0% {
-        /* Can change transition if from left side just do it 100% */
-        transform: translateX(70%) !important;
-    }
-
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-
-.hideDiv {
-    animation-duration: 0.6s !important;
-    animation-timing-function: ease-in-out !important;
-    animation-delay: 0s !important;
-    animation-iteration-count: 1 !important;
-    animation-name: slideInRight !important;
-}
-
-.none {
-    display: none;
-}
-
-#open_nav_btn {
+#toggleButton {
     display: none;
     float: right;
+    margin: 10px auto;
+    height: 24px;
+    cursor: pointer;
+    width: 27px;
 }
 
-#open_nav_div {
-    display: none;
-    background-color: green;
-    top: 0;
-    position: fixed;
-    width: 70%;
+.navMenuIcon {
+    transform: rotate(50deg) !important;
+    transition: ease-in 0.15s;
+    height: 12px;
 }
 
-#close_nav_btn {
-    float: right;
+.navCloseIcon {
+    transform: rotate(-50deg) !important;
+    transition: ease-in 0.15s;
+    height: 10px;
 }
 
 
@@ -108,32 +77,19 @@ a {
         display: none !important;
     }
 
-    #open_nav_btn {
+    #toggleButton {
         display: block;
     }
 }
 
 @media screen and (min-width: 701px) {
 
-    #open_nav_div {
-        display: none !important;
-    }
-}
-
-
-.container {
-    animation: transitionIn 1s;
-    margin-top: 120px;
-}
-
-@keyframes transitionIn {
-    from {
-        opacity: 0;
-        transform: rotateX(-10deg);
+    #navLinksResponsive {
+        display: none;
     }
 
-    to {
-        opacity: 1;
-        transform: rotateX(0);
+    .showNavDiv>nav {
+        height: 10px !important;
+        transition: none;
     }
 }
