--- a/home/home.css
+++ b/home/home.css
@@ -1,5 +1,13 @@
+/* Body styling */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+/* Navbar Styling */
 nav {
-    background: #666;
+    background: white;
     padding: 40px;
     position: fixed;
     top: 0;
@@ -7,54 +15,64 @@ nav {
     right: 0;
     height: 10px;
     transition: height 0.5s;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+
+/*     Navbar Links Div Styling   */
+.nav_links_div {
+    float: right;
+}
+
+/*     Navbar's Links Styling      */
+a {
+    text-decoration: none;
+    display: inline-block;
+    margin-right: 10px;
+    color: rgb(19, 0, 87);
+}
+
+
+
+/*     Navbar opening on toggle button  (Responsive Screen) */
 .showNavDiv>nav {
     height: 200px !important;
 }
 
+
+/*     Navbar closing on toggle button  (Responsive Screen)  */
 .hideNavDiv>nav {
     height: 10px !important;
 }
 
 
-body {
-    margin: 0;
-    font-family: "Segoe UI", Arial, Helvetica, Sans Serif;
-}
 
-a {
-    text-decoration: none;
-    display: inline-block;
-    margin-right: 10px;
-    color: blue;
-}
-
-
-
-
-#navLinksResponsive {
+/*     On responsive screen clicking on toggle button showing nav links div       */
+#responsiveNavLinksDiv {
     visibility: hidden;
     margin-top: 60px !important;
     height: 0px !important;
     overflow: hidden;
-    transition: height 4s;
+    transition: height 1s;
 }
 
-.hello>#navLinksResponsive {
+.showResponsiveNavLinksDiv>#responsiveNavLinksDiv {
     visibility: visible !important;
     height: 200px !important;
 
 }
 
-.hi>#navLinksResponsive {
+.hideResponsiveNavLinksDiv>#responsiveNavLinksDiv {
     visibility: hidden !important;
     height: 0px !important;
-
+    transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
 
+/*      Ends Here        */
 
 
+
+/*         Navbar's Toggle Button Styling      */
 #toggleButton {
     display: none;
     float: right;
@@ -76,10 +94,12 @@ a {
     height: 10px;
 }
 
+/*           Toggle Button Styling Ends Here        */
 
 
+/*      Responsivess of Navbar      */
 @media screen and (max-width: 700px) {
-    .links_div {
+    .nav_links_div {
         display: none !important;
     }
 
@@ -90,7 +110,7 @@ a {
 
 @media screen and (min-width: 701px) {
 
-    #navLinksResponsive {
+    #responsiveNavLinksDiv {
         display: none;
     }
 
@@ -100,3 +120,5 @@ a {
     }
 
 }
+
+/*           Navbar Styling ENDs Here          */
