--- a/home/home.css
+++ b/home/home.css
@@ -13,7 +13,7 @@ nav {
     top: 0;
     left: 0;
     right: 0;
-    height: 10px;
+    height: 1px;
     transition: height 0.5s;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
@@ -22,14 +22,18 @@ nav {
 /*     Navbar Links Div Styling   */
 .nav_links_div {
     float: right;
+    padding-right: 90px;
 }
 
 /*     Navbar's Links Styling      */
-a {
+.links {
     text-decoration: none;
     display: inline-block;
-    margin-right: 10px;
     color: rgb(19, 0, 87);
+    font-family: sans-serif;
+    margin-left: 50px;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 
@@ -76,10 +80,12 @@ a {
 #toggleButton {
     display: none;
     float: right;
-    margin: 10px auto;
     height: 24px;
     cursor: pointer;
     width: 27px;
+    background: none;
+    border: none;
+    font-size: 23px;
 }
 
 .navMenuIcon {
@@ -97,8 +103,25 @@ a {
 /*           Toggle Button Styling Ends Here        */
 
 
+
 /*      Responsivess of Navbar      */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1050px) {
+    .nav_links_div {
+        padding-right: 20px !important;
+    }
+
+    .links {
+        margin-left: 30px;
+    }
+}
+
+
+@media screen and (max-width: 750px) {
+
+    nav {
+        padding-right: 15px !important;
+    }
+
     .nav_links_div {
         display: none !important;
     }
@@ -108,7 +131,7 @@ a {
     }
 }
 
-@media screen and (min-width: 701px) {
+@media screen and (min-width: 750px) {
 
     #responsiveNavLinksDiv {
         display: none;
