--- a/home/home.css
+++ b/home/home.css
@@ -6,16 +6,26 @@ body {
 
 
 /* Navbar Styling */
+
+
 nav {
     background: white;
-    padding: 40px;
+    padding: 23px 40px 0px 40px !important;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 1px;
+    height: 60px !important;
     transition: height 0.5s;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+#nav_logo_heading {
+    font-family: sans-serif;
+    display: inline;
+    font-size: 30px;
+    color: rgb(13, 13, 54);
+    font-weight: 600;
 }
 
 
@@ -23,6 +33,7 @@ nav {
 .nav_links_div {
     float: right;
     padding-right: 90px;
+    padding-top: 10px;
 }
 
 /*     Navbar's Links Styling      */
@@ -40,13 +51,13 @@ nav {
 
 /*     Navbar opening on toggle button  (Responsive Screen) */
 .showNavDiv>nav {
-    height: 200px !important;
+    height: 230px !important;
 }
 
 
 /*     Navbar closing on toggle button  (Responsive Screen)  */
 .hideNavDiv>nav {
-    height: 10px !important;
+    height: 60px !important;
 }
 
 
@@ -54,7 +65,7 @@ nav {
 /*     On responsive screen clicking on toggle button showing nav links div       */
 #responsiveNavLinksDiv {
     visibility: hidden;
-    margin-top: 60px !important;
+    margin-top: 30px !important;
     height: 0px !important;
     overflow: hidden;
     transition: height 1s;
