--- a/home/home.css
+++ b/home/home.css
@@ -10,12 +10,12 @@ body {
 
 nav {
     background: white;
-    padding: 23px 40px 0px 40px !important;
+    padding: 17px 40px 5px 40px !important;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 60px !important;
+    height: 45px !important;
     transition: height 0.5s;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
@@ -163,7 +163,7 @@ nav {
 /*       Slider Styling        */
 #slider_div {
     height: 50% !important;
-    margin-top: 83px !important;
+    margin-top: 68px !important;
 }
 
 
@@ -186,7 +186,7 @@ nav {
 
 /*       Cards Styling */
 #cards_main_div {
-    width: 90%;
+    width: 87%;
     margin: auto;
     background-color: aliceblue;
     text-align: center;
@@ -194,11 +194,13 @@ nav {
 }
 
 .cards {
-    width: 33% !important;
+    width: 28% !important;
     display: inline-block;
+    background-color: black;
+    margin: 16px;
 }
 
 .cards_images {
-    width: 80%;
+    width: 100%;
     height: 350px;
 }
