--- a/home/home.css
+++ b/home/home.css
@@ -1,7 +1,7 @@
 /* Body styling */
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px !important;
+    padding: 0px !important;
 }
 
 
@@ -195,7 +195,7 @@ nav {
 .card {
     width: 28% !important;
     display: inline-block;
-    margin: 16px;
+    margin: 20px 6px 10px 6px;
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
 }
@@ -211,14 +211,63 @@ nav {
 .quickview {
     position: absolute;
     width: 24.4%;
-    height: 24%;
+    height: 350px;
     background-color: rgba(0, 0, 0, 0.3);
     margin: auto;
     opacity: 0;
     transition: opacity 0.5s;
-    padding-top: 10%;
+}
+
+.quickview_btn {
+    margin-top: 45%;
 }
 
 .card:hover .quickview {
     opacity: 1;
+}
+
+
+/* Responsiveness of Card */
+@media screen and (max-width: 1250px) {
+    #cards_main_div {
+        width: 96%;
+    }
+}
+
+
+@media screen and (max-width: 950px) {
+    #cards_main_div {
+        width: 100%;
+    }
+
+    .card {
+        width: 40% !important;
+    }
+}
+
+@media screen and (max-width:670px) {
+    .card {
+        width: 47% !important;
+    }
+
+    .card_image {
+        width: 100%;
+        height: 300px;
+    }
+
+    .quickview {
+        height: 300px !important;
+    }
+}
+
+
+@media screen and (max-width:535px) {
+    .card {
+        width: 74% !important;
+    }
+
+    .card_image {
+        width: 100%;
+        height: 270px;
+    }
 }
