--- a/home/home.css
+++ b/home/home.css
@@ -51,13 +51,15 @@ nav {
 
 /*     Navbar opening on toggle button  (Responsive Screen) */
 .showNavDiv>nav {
-    height: 230px !important;
+    height: 215px !important;
+    padding: 13px 15px 0px 30px !important;
 }
 
 
 /*     Navbar closing on toggle button  (Responsive Screen)  */
 .hideNavDiv>nav {
-    height: 60px !important;
+    height: 45px !important;
+    padding: 13px 15px 0px 30px !important;
 }
 
 
@@ -220,7 +222,7 @@ nav {
 }
 
 
-.card>.quickview {
+.card .quickview {
     position: absolute;
     width: 24.4%;
     height: 350px;
@@ -249,6 +251,11 @@ nav {
     }
 }
 
+@media screen and (max-width: 1115px) {
+    .card .quickview {
+        width: 26.9%;
+    }
+}
 
 @media screen and (max-width: 950px) {
     #cards_main_div {
@@ -257,6 +264,10 @@ nav {
 
     .card {
         width: 40% !important;
+    }
+
+    .card .quickview {
+        width: 40%;
     }
 }
 
@@ -273,6 +284,10 @@ nav {
     .quickview {
         height: 300px !important;
     }
+
+    .card .quickview {
+        width: 47%;
+    }
 }
 
 
@@ -283,6 +298,11 @@ nav {
 
     .card_image {
         width: 100%;
-        height: 270px;
+        height: 300px;
+    }
+
+    .card .quickview {
+        width: 74%;
+        height: 350px;
     }
 }
