--- a/product_details/product-details.css
+++ b/product_details/product-details.css
@@ -20,13 +20,14 @@ p {
 
 #main_img {
     height: 450px;
-    width: 400px;
+    width: 41%;
 }
 
 .productDetailsDiv {
     vertical-align: top;
     display: inline-block !important;
     margin: 60px 2px 2px 20px;
+    width: 56%;
 }
 
 #product_name {
@@ -38,7 +39,7 @@ p {
     margin-top: 8px;
     margin-bottom: 25px;
     font-size: 22px;
-    color: rgb(144, 35, 35);
+    color: darkred;
 }
 
 .dummy_data {
@@ -47,13 +48,34 @@ p {
 }
 
 .size {
-    margin-top: 25px;
+    margin-top: 35px;
+    margin-bottom: 25px;
 }
 
+.size_heading {
+    margin: 10px 30px 10px 10px;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.size_btns {
+    margin: 0px 7px 0px 7px;
+    padding: 5px 13px 5px 13px;
+    font-size: 12px;
+    background-color: white;
+    border: 1px solid grey;
+    height: 25px !important;
+}
+
+.size_btns:focus {
+    border: 2px solid black;
+    font-weight: 600px;
+    transition: 0.25s;
+}
 
 
 
 .other_images {
     height: 140px;
-    width: 133px;
+    width: 13.45%;
 }
