--- a/product_details/product-details.css
+++ b/product_details/product-details.css
@@ -6,6 +6,7 @@ body {
     width: 80% !important;
     margin: auto;
     margin-top: 35px;
+    margin-bottom: 20px;
 }
 
 p {
@@ -20,14 +21,13 @@ p {
 
 #main_img {
     height: 450px;
-    width: 41%;
+    width: 80%;
 }
 
 .productDetailsDiv {
     vertical-align: top;
     display: inline-block !important;
-    margin: 60px 2px 2px 20px;
-    width: 56%;
+    margin: 60px 2px 2px 10px;
 }
 
 #product_name {
@@ -147,23 +147,10 @@ p {
 
 .other_images {
     height: 130px;
-    width: 13.45%;
+    width: 26%;
 }
 
-@media screen and (max-width:1150px) {
-    .main-container {
-        width: 90% !important;
-    }
 
-    #main_img {
-        width: 40% !important;
-    }
-
-    .productDetailsDiv {
-        width: 50% !important;
-    }
-
-}
 
 @media screen and (max-width:800px) {
     .main-container {
@@ -190,5 +177,27 @@ p {
     .size_btns {
         margin: 0px 3px 0px 3px;
         padding: 4px 9px 4px 9px;
+    }
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.column6 {
+    flex-basis: 50%;
+    margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .column6 {
+        flex-basis: 100%;
+    }
+
+    .other_images {
+        width: 32%;
     }
 }
