--- a/home/home.css
+++ b/home/home.css
@@ -375,7 +375,7 @@ nav {
 
     .card_image {
         width: 100%;
-        height: 300px;
+        height: 250px !important;
     }
 
     .card .view_details_div {
@@ -390,14 +390,13 @@ nav {
 }
 
 
-@media screen and (max-width:535px) {
+@media screen and (max-width:500px) {
     .card {
         width: 70% !important;
     }
 
     .card_image {
         width: 100%;
-        height: 300px;
     }
 
     .card .view_details_div {
