--- a/home/home.css
+++ b/home/home.css
@@ -413,17 +413,19 @@ nav {
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
+    padding-bottom: 20px;
 }
 
 .col3 {
-    width: 20%;
+    width: 22%;
     padding: 10px;
     text-align: center;
 }
 
 .big_column {
-    width: 26%;
+    width: 22%;
     padding: 10px;
+    text-align: center;
 }
 
 .divs_headings {
@@ -439,4 +441,73 @@ nav {
 .footer_links {
     text-decoration: none;
     color: rgb(116, 116, 116);
+}
+
+
+.links_icons {
+    padding: 6px;
+    border-radius: 30px;
+    border: 1px solid black;
+    cursor: pointer;
+    font-size: 16px;
+    margin-right: 10px;
+    color: black;
+    font-weight: 600;
+
+}
+
+@media screen and (max-width:950px) {
+    .col3 {
+        width: 44%;
+    }
+
+    .big_column {
+        width: 44%;
+    }
+
+    .divs_headings {
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    .divs_content {
+        margin: 4px;
+        font-size: 12px;
+    }
+
+    .links_icons {
+        padding: 5px;
+        font-size: 14px;
+        margin-right: 7px;
+
+    }
+
+}
+
+@media screen and (max-width:370px) {
+    .col3 {
+        width: 90%;
+    }
+
+    .big_column {
+        width: 90%;
+    }
+
+    /* .divs_headings {
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    .divs_content {
+        margin: 4px;
+        font-size: 12px;
+    }
+
+    .links_icons {
+        padding: 5px;
+        font-size: 14px;
+        margin-right: 7px;
+
+    } */
+
 }
