--- a/all-products/all-products.css
+++ b/all-products/all-products.css
@@ -230,3 +230,142 @@ nav {
 }
 
 /*           Navbar Styling ENDs Here          */
+
+
+
+
+
+/*                         Cards Styling                                 */
+#cards_main_div {
+    width: 98%;
+    margin: auto;
+    text-align: center;
+    margin-top: 70px;
+}
+
+.card {
+    width: 21% !important;
+    display: inline-block;
+    margin: 20px 20px 20px 6px;
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card_image {
+    width: 100%;
+    height: 350px;
+    opacity: 1;
+    transition: opacity 0.6s;
+}
+
+
+.card .view_details_div {
+    position: absolute;
+    width: 20.6%;
+    height: 350px;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin: auto;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.view_details_btn {
+    margin-top: 40%;
+    padding: 7px 10px 7px 10px;
+    background-color: rgba(245, 244, 244, 0.5);
+    color: white;
+    border: none;
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.detailsBtnOnclickStyling {
+    background-color: rgba(163, 163, 163, 0.5);
+    transition: 0.15;
+}
+
+.card:hover .view_details_div {
+    opacity: 1;
+}
+
+
+/* Responsiveness of Card */
+@media screen and (max-width: 1250px) {
+    #cards_main_div {
+        width: 96%;
+    }
+
+    .card .view_details_div {
+        width: 20.25%;
+    }
+}
+
+@media screen and (max-width: 1115px) {
+    .card .view_details_div {
+        width: 26.9%;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    #cards_main_div {
+        width: 100%;
+    }
+
+    .card {
+        width: 40% !important;
+    }
+
+    .card .view_details_div {
+        width: 40%;
+    }
+}
+
+.cardOnclickTransition {
+    opacity: 0.5;
+    transition: 0.2s;
+}
+
+.product_name {
+    font-family: sans-serif;
+    font-weight: 550;
+}
+
+
+@media screen and (max-width:670px) {
+    .card {
+        width: 42% !important;
+        height: 320px;
+        margin-right: 10px;
+    }
+
+    .card_image {
+        width: 100%;
+        height: 270px !important;
+    }
+
+    .card .view_details_div {
+        width: 42%;
+        height: 270px !important;
+    }
+
+    .product_name {
+        font-size: 14px;
+        font-weight: 510;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+    .card {
+        width: 70% !important;
+    }
+
+    .card_image {
+        width: 100%;
+    }
+
+    .card .view_details_div {
+        width: 70%;
+        height: 350px;
+    }
+}
