--- a/cart/cart.css
+++ b/cart/cart.css
@@ -20,3 +20,9 @@
     margin-top: 100px;
     border: 1px solid grey;
 }
+
+.decrease_btn,
+.increase_btn {
+    font-size: 24px;
+    margin-left: 20px;
+}
