--- a/home/home.css
+++ b/home/home.css
@@ -11,7 +11,7 @@ body {
 
 nav {
     background: white;
-    padding: 17px 40px 5px 40px !important;
+    padding: 17px 0px 5px 40px !important;
     position: fixed;
     z-index: 99;
     top: 0;
@@ -48,7 +48,8 @@ nav {
 
 
 
-.nav_links_para {
+.nav_links_para,
+.cartLinkPara {
     display: inline;
     position: relative;
     padding-bottom: 5px;
@@ -72,6 +73,14 @@ nav {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+
+
+
+.fa-shopping-cart {
+    font-size: 21px;
+}
+
+
 
 /*     Navbar opening on toggle button  (Responsive Screen) */
 .showNavDiv>nav {
@@ -496,5 +505,5 @@ nav {
 
 #cart_quantity {
     position: absolute;
-    bottom: 13px;
+    bottom: 15px;
 }
