--- a/cart/cart.css
+++ b/cart/cart.css
@@ -1,5 +1,6 @@
 * {
     font-family: sans-serif;
+    margin: 0;
 }
 
 .product {
@@ -9,6 +10,7 @@
 #cart_main_div {
     padding: 20px;
     background-color: azure;
+    display: flex;
 }
 
 .product-details {
@@ -71,9 +73,9 @@
 }
 
 
-#cart_main_div {
+/* #cart_main_div {
     display: flex;
-}
+} */
 
 #productDiv,
 #quantityDiv,
