--- a/cart/cart.css
+++ b/cart/cart.css
@@ -7,7 +7,8 @@
 
 #cart_main_div {
     padding: 20px;
-    background-color: azure;
+    background-color: white;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.19);
     margin: 10%;
 }
 
@@ -59,4 +60,8 @@
     background: none;
     border: none;
     font-size: 16px;
+}
+
+#order_portion {
+    margin-top: 50px;
 }
