--- a/cart/cart.css
+++ b/cart/cart.css
@@ -32,7 +32,9 @@
     .product {
         display: flex;
         padding: 10px;
-        height: 115px;
+        height: 90px;
+        margin-top: 30px;
+        margin-bottom: 20px;
     }
 
     .productImage {
@@ -54,16 +56,55 @@
         margin: 0px;
     }
 
+    .prod-name {
+        color: rgb(62, 61, 61);
+        font-weight: bold;
+        font-size: 16px;
+    }
+
+    .prod-price {
+        color: black;
+        font-weight: bold;
+        font-size: 19px;
+    }
+
     .productQuantity {
-        width: 23.7%;
+        width: 24.5%;
         display: inline-block;
-        padding-left: 30px;
+        text-align: center;
+    }
+
+    .prodQuantityDiv {
+        display: inline-block;
+        width: 70px;
+        border: 1px solid rgb(193, 191, 191);
+        border-radius: 3px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+
+
+    .increase_btn {
+        border-radius: 12px;
+        background: none;
+        font-weight: 600;
+        font-size: 15px;
+    }
+
+    .decrease_btn {
+        border-radius: 12px;
+        background: none;
+        font-weight: 600;
+        font-size: 15px;
+        padding-left: 7px;
+        padding-right: 7px;
     }
 
     .productSubTotal {
-        width: 17%;
+        width: 20%;
         display: inline-block;
-        padding-left: 30px;
+        text-align: center;
     }
 
 
@@ -75,13 +116,20 @@
     }
 
     #quantityDiv {
-        width: 24%;
+        width: 22%;
         padding: 30px;
+        align-items: center;
+        text-align: center;
     }
 
     #subtotalDiv {
-        width: 22.3%;
+        width: 16%;
         padding: 30px;
+        text-align: center;
+    }
+
+    #delete_btn_div {
+        width: 8%;
     }
 
     .deleteProdDiv {
@@ -93,6 +141,7 @@
         background: none;
         border: none;
         font-size: 16px;
+        color: rgb(241, 21, 21);
     }
 
 
@@ -105,7 +154,38 @@
     }
 
     #total_div {
-        /* display: inline-block; */
         float: right;
         align-items: right;
+    }
+
+    .mainHeadings {
+        font-weight: 700;
+        font-size: 15px;
+        color: rgb(136, 135, 135);
+    }
+
+    hr {
+        border: 0.1px solid rgb(236, 234, 234);
+
+    }
+
+    #checkoutBtn {
+        padding-top: 7px;
+        padding-bottom: 7px;
+        width: 130px;
+        background-color: white;
+        color: rgb(73, 71, 71);
+        font-weight: 800;
+    }
+
+    #totalAmount {
+        color: grey;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    #total {
+        color: black;
+        font-size: 21px;
+        font-weight: 600;
     }
