--- a/cart/cart.css
+++ b/cart/cart.css
@@ -29,88 +29,10 @@
         display: flex;
     }
 
-    .product {
-        display: flex;
-        padding: 10px;
-        height: 90px;
-        margin-top: 30px;
-        margin-bottom: 20px;
-    }
 
-    .productImage {
-        width: 100%;
-    }
-
-    .prod-img {
-        height: 90px;
-        width: 150px;
-        display: inline;
-        vertical-align: middle;
-        padding-right: 20px;
-    }
-
-
-    .productName {
-        width: 34%;
-        display: inline-block;
-        margin: 0px;
-    }
-
-    .prod-name {
-        color: rgb(62, 61, 61);
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .prod-price {
-        color: black;
-        font-weight: bold;
-        font-size: 19px;
-    }
-
-    .productQuantity {
-        width: 24.5%;
-        display: inline-block;
-        text-align: center;
-    }
-
-    .prodQuantityDiv {
-        display: inline-block;
-        width: 70px;
-        border: 1px solid rgb(193, 191, 191);
-        border-radius: 3px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-    }
-
-
-
-    .increase_btn {
-        border-radius: 12px;
-        background: none;
-        font-weight: 600;
-        font-size: 15px;
-    }
-
-    .decrease_btn {
-        border-radius: 12px;
-        background: none;
-        font-weight: 600;
-        font-size: 15px;
-        padding-left: 7px;
-        padding-right: 7px;
-    }
-
-    .productSubTotal {
-        width: 20%;
-        display: inline-block;
-        text-align: center;
-    }
-
-
-
+    /*   ***************              PRODUCTS HEADINGS  ********************                  */
     #productDiv {
-        width: 39.5%;
+        width: 39%;
         padding-top: 30px;
         padding-left: 180px;
     }
@@ -130,6 +52,85 @@
 
     #delete_btn_div {
         width: 8%;
+        margin-left: 5px;
+    }
+
+
+
+
+
+
+    .product {
+        display: flex;
+        padding: 10px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
+    .productImageDiv {
+        width: 14%;
+    }
+
+    .prod-img {
+        height: 90px;
+        width: 100%;
+        display: inline;
+        padding-right: 20px;
+    }
+
+
+    .productNameDiv {
+        width: 35%;
+        display: inline-block;
+    }
+
+    .prod-name {
+        color: rgb(62, 61, 61);
+        font-weight: bold;
+        font-size: 16px;
+    }
+
+    .prod-price {
+        color: black;
+        font-weight: bold;
+        font-size: 19px;
+    }
+
+    .productQuantityDiv {
+        width: 24.6%;
+        display: inline-block;
+        text-align: center;
+    }
+
+    .prodQuantity {
+        display: inline-block;
+        width: 70px;
+        border: 1px solid rgb(193, 191, 191);
+        border-radius: 3px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    .increase_btn {
+        border-radius: 12px;
+        background: none;
+        font-weight: 600;
+        font-size: 15px;
+    }
+
+    .decrease_btn {
+        border-radius: 12px;
+        background: none;
+        font-weight: 600;
+        font-size: 15px;
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+
+    .productSubTotalDiv {
+        width: 19%;
+        display: inline-block;
+        text-align: center;
     }
 
     .deleteProdDiv {
@@ -143,6 +144,7 @@
         font-size: 16px;
         color: rgb(241, 21, 21);
     }
+
 
 
 
